crates/pgt_pretty_print/tests/snapshots/single/tests__row_compare_expr_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/row_compare_expr_0_60.sql
snapshot_kind: text
---
SELECT
  *
FROM
  employees
WHERE (salary,
bonus) > (50000,
10000);
