crates/pgt_pretty_print/tests/snapshots/single/tests__row_expr_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/row_expr_0_60.sql
snapshot_kind: text
---
SELECT ROW(1, 2, 3);
