crates/pgt_pretty_print/tests/snapshots/single/tests__scalar_array_op_expr_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/scalar_array_op_expr_0_60.sql
snapshot_kind: text
---
SELECT * FROM users WHERE id IN (1, 2, 3);
