crates/pgt_pretty_print/tests/snapshots/single/tests__short_select_stays_inline_80.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/short_select_stays_inline_80.sql
snapshot_kind: text
---
SELECT a FROM t;
