crates/pgt_pretty_print/tests/snapshots/single/tests__simple_select_20.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/simple_select_20.sql
snapshot_kind: text
---
SELECT
  a,
  b,
  c
FROM
  t;
